# middleware/validate.js
@@ -1,27 +1,0 @@
-const validator = require('../validation/validate');
-
-const saveContact = (req, res, next) => {
-    const validationRule = {
-        firstName: 'required|string',
-        lastName: 'required|string',
-        email: 'required|email',
-        favoriteColor: 'required|string',
-        birthday: 'date'
-    };
-    validator(req.body, validationRule, {}, (err, status) => {
-        if (!status) {
-            res.status(412)
-                .send({
-                    success: false,
-                    message: 'Validation failed',
-                    data: err
-                });
-        } else {
-            next();
-        }
-    });
-};
-
-module.exports = {
-    saveContact
-};
